--- a/work-in-progress.html
+++ b/work-in-progress.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-    <div class="Titre1">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="work-in-progress.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+</head>
+
+<body>
+
+  <header>
+    <img src="Images/Helmet.png" alt="">
+    <h1 class="h1">Lightning Skull</h1>
+    <img src="Images/Helmet.png" alt="">
+  </header>
+
+  <div class="Coming_Soon">
+
+    <div class="Soon">
+      <h2>Coming Soon...</h2>
     </div>
 
-    <div class="Comming_Soon">
-
-      <div class="Soon">
-
-      </div>
-
-      <div class="Texte">
-
-      </div>
-
+    <div class="Texte">
+      <p>Notre site internet est en maintenance nous reviendrons vers le <b>08/11/2020</b></p>
     </div>
 
-    <div class="">
+  </div>
+
+  <footer>
+
 
       <div class="Plus">
-
+        <p>Pour plus d'informations envoyer un mail : <b class="b2">lightningskull@gmail.com</b></p>
       </div>
 
       <div class="Réseaux">
+        <p>N'oubliez pas de nous suivre sur nos différents réseaux sociaux</p>
+        <div class="fa1">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+        </div>
 
       </div>
 
-    </div>
 
-  </body>
+  </footer>
+
+
+
+
+</body>
+
 </html>
